--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(/portifolio/adriely.jpg);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(/adriely.jpg);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -63,23 +63,7 @@
 	        </div>
 	      </div>
 
-	      <div class="slider-item">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(/portifolio/karou.jpeg);">
-	          		<div class="overlay"></div>
-	          	</div>
-		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<div class="text">
-		          		<span class="subheading">Hello!</span>
-			             <h1 class="mb-4 mt-3"> Me - chamo <span>Maria Karoline</span></h1> <p><a href="#" class="btn btn-primary py-3 px-4">Sobre mim</a></p>
-			            
-		            </div>
-		          </div>
-	        	</div>
-	        </div>
-	      </div>
+	      
 	    </div>
     </section>
 
@@ -99,7 +83,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">Sobre nós</h1>
 		            <h2 class="mb-4">Sobre nós</h2>
-		            <p>Somos alunas do Istituto Federal de Alagoas, cursando técnico em informática no 3° ano do ensino médio</p>
+		            <p>Aluna do Istituto Federal de Alagoas, cursando técnico em informática no 3° ano do ensino médio</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 			          </div>
 		        </div>
