--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3"> Me - chamo <span>Adriely</span></h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Sobre mim</a></p>
+			            <p><a href="#" class="btn btn-primary py-3 px-4">Sobre mimm</a></p>
 		            </div>
 		          </div>
 	        	</div>
