--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">meninas programadoras</a>
+	      <a class="navbar-brand" href="index.html">menina programadora</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -49,7 +49,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(/adriely.jpg);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(/images/adriely.jpg);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -81,8 +81,8 @@
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">Sobre nós</h1>
-		            <h2 class="mb-4">Sobre nós</h2>
+		          	<h1 class="big">Sobre mim</h1>
+		            <h2 class="mb-4">Sobre mim</h2>
 		            <p>Aluna do Istituto Federal de Alagoas, cursando técnico em informática no 3° ano do ensino médio</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 			          </div>
